Factory/FactoryMetodのバグ修正